--- a/html_alltags.html
+++ b/html_alltags.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 </head> 
-<body bgcolor="yellow">
+<body bgcolor="#FFA500">
 <!-Hi image tag is very cool to learn-> 
 <hi style="text-align:center;color:blue"> VIRAT KOHLI <hr>
 <br>
-<img src="images/virat kohli.jpg"
+<img src="https://th.bing.com/th/id/OIP.6RRz0nyp6K19ZUmGbwhFsQHaHA?w=186&h=176&c=7&r=0&o=5&dpr=1.7&pid=1.7">
 width="300" height="300" style="border:1px solid">
 </img> 
 <br>
